hphp/test/vm/interface8.php.exp
Test begin
HipHop Fatal error: Declaration of B::a() must be compatible with that of A::a() in hphp/test/vm/interface8.php on line 12
